[gd_scene load_steps=3 format=3 uid="uid://hd74w6jps4nh"]

[ext_resource type="Script" path="res://addons/AWOC/Scenes/CenterPanes/Welcome/awoc_welcome_pane.gd" id="1_57nee"]
[ext_resource type="Theme" uid="uid://drffev6w87ljh" path="res://addons/AWOC/Themes/main_theme.tres" id="2_c5jlm"]

[node name="Welcome" type="MarginContainer" node_paths=PackedStringArray("new_awoc_dialog", "load_awoc_dialog")]
custom_minimum_size = Vector2(500, 550)
anchors_preset = -1
anchor_right = 0.434
anchor_bottom = 0.849
offset_right = -499.968
offset_bottom = -550.152
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_57nee")
new_awoc_dialog = NodePath("HBoxContainer/MainContainer/NewAWOCDialog")
load_awoc_dialog = NodePath("HBoxContainer/MainContainer/LoadAWOCDialog")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MainContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="HeadLabel" type="Label" parent="HBoxContainer/MainContainer"]
layout_mode = 2
theme = ExtResource("2_c5jlm")
text = "Welcome"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/MainContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MainContainer/CenterContainer"]
custom_minimum_size = Vector2(150, 23)
layout_mode = 2
theme_override_constants/separation = 10

[node name="NewAWOCButton" type="Button" parent="HBoxContainer/MainContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_c5jlm")
text = "New AWOC"

[node name="LoadAWOCButton" type="Button" parent="HBoxContainer/MainContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_c5jlm")
text = "Load AWOC"

[node name="NewAWOCDialog" type="FileDialog" parent="HBoxContainer/MainContainer"]
title = "New AWOC"
initial_position = 2
size = Vector2i(400, 300)
theme = ExtResource("2_c5jlm")
filters = PackedStringArray("*.res ; Resource")

[node name="LoadAWOCDialog" type="FileDialog" parent="HBoxContainer/MainContainer"]
title = "Open a File"
initial_position = 2
size = Vector2i(400, 300)
theme = ExtResource("2_c5jlm")
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.res ; Resource")

[connection signal="pressed" from="HBoxContainer/MainContainer/CenterContainer/VBoxContainer/NewAWOCButton" to="." method="_on_new_awoc_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MainContainer/CenterContainer/VBoxContainer/LoadAWOCButton" to="." method="_on_load_awoc_button_pressed"]
[connection signal="file_selected" from="HBoxContainer/MainContainer/NewAWOCDialog" to="." method="_on_new_awoc_dialog_file_selected"]
[connection signal="file_selected" from="HBoxContainer/MainContainer/LoadAWOCDialog" to="." method="_on_load_awoc_dialog_file_selected"]
